# shady-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
shady_generator/: Cargo.toml  README.md
shady_generator/src/: connection.rs  error.rs  generator.rs  glsl_type.rs  graphic_library.rs  input.rs  lib.rs  node.rs  output.rs  property.rs  shader.rs  shader_operation.rs  shader_type.rs
shady_generator/src/glsl/: as_primitive_glsl_type.rs  mod.rs  primitive_glsl_type.rs
shady_generator/src/native_type/: floating_native_type.rs  mod.rs  non_scalar_native_type.rs  scalar_native_type.rs
shady_generator/src/node/: connection.rs  connector.rs  input.rs  mod.rs  operation.rs  output.rs  presets.rs
shady_generator/src/node/operation/: mod.rs  native_function.rs  native_operation.rs  non_scalar_swizzle.rs
shady_generator/src/node_operation/: mod.rs  native_function.rs  native_operation.rs  non_scalar_swizzle.rs
shady_generator/src/shader/: constant.rs  mod.rs  precision.rs  property.rs  shader_operations.rs  shader_type.rs  to_glsl.rs
shady_generator/test/: basic_shader.yaml  looping_shader_1.yaml  looping_shader_2.yaml  shader_example_1.yaml  shader_example_2.yaml  simple_shader.yaml  test_func.glsl
src/: common.rs  main.rs
src/components/: connector.rs  input_slot.rs  interaction.rs  log_element.rs  mod.rs  node.rs  node_input.rs  node_output.rs  output_slot.rs  property.rs  value.rs
src/events/: io_event.rs  mod.rs  node_event.rs  shader_event.rs  spawn_node.rs
src/resources/: assets.rs  camera.rs  camera_dragging.rs  color_scheme.rs  connector_candidate.rs  creation_candidate.rs  cursor_position.rs  dragged_entities.rs  mod.rs  preview.rs  selected_entities.rs  shader.rs  shader_loader.rs  ui_state.rs
src/systems/: assets.rs  camera.rs  input.rs  io.rs  lines.rs  log.rs  mod.rs  nodes.rs  preview.rs  setup.rs  shader.rs  spawner.rs  ui.rs
src/systems/ui/: constants.rs  creation_menu.rs  live_edit.rs  log.rs  mod.rs  preview_material.rs
