[package]
name = "shady-rs"
version = "0.1.0"
edition = "2021"
authors = ["Felix de Maneville <felix.maneville@gmail.com>"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/ManevilleF/shady-rs"
keywords = ["GPU", "Shader", "GLSL", "OpenGL", "bevy"]
exclude = [".github", "docs"]
description = "Shader Graph made in rust"

[features]
default = []
debug = ["bevy-inspector-egui"]

[dependencies]
lyon_path = "0.17"
bevy_prototype_lyon = "0.3"
rfd = "0.6"
futures-lite = "1.12"

[dependencies.bevy-inspector-egui]
version = "0.6"
optional = true

[dependencies.shady_generator]
path = "shady_generator"

[dependencies.bevy_egui]
version = "0.9"

[dependencies.bevy]
version = "0.5"
default-features = false
features = ["render", "bevy_winit", "png", "x11"]

[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy" }
bevy_prototype_lyon = { git = "https://github.com/Nilirad/bevy_prototype_lyon" }
bevy_egui = { git = "https://github.com/jakobhellermann/bevy_egui", branch = "bevy-main" }
bevy-inspector-egui = { git = "https://github.com/jakobhellermann/bevy-inspector-egui/", branch = "bevy-main" }

# Enable optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Maybe also enable only a small amount of optimization for our code:
[profile.dev]
opt-level = 1

[workspace]
members = ["shady_generator"]