[package]
name = "shady_generator"
version = "0.1.0"
edition = "2021"
authors = ["Felix de Maneville <felix.maneville@gmail.com>"]
license-file = "../LICENSE"
repository = "https://github.com/ManevilleF/shady-rs/tree/main/shady_generator"
keywords = ["GPU", "Shader", "GLSL", "OpenGL", "bevy"]
description = "Shader code generator made in rust for shady-rs"
readme = "README.md"
exclude = ["test"]

[dependencies]
indoc = "1.0"
thiserror = "1.0"
log = "0.4"
serde_yaml = "0.8"
lazy_static = "1.4"
rand = "0.8"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies]
env_logger = "0.9"
ctor = "0.1"